Finished ScyllaDB Panaco Storage type